Fixed learn nav wrapping on small screens, added closing button on image modal

--- a/components/app/ImageModal.module.css
+++ b/components/app/ImageModal.module.css
@@ -21,3 +21,12 @@
     max-width: 80%;
     max-height: 80%;
 }
+
+.closeBtn {
+    composes: btn-icon from "../../styles/buttons.module.css";
+    composes: btn-icon-white from "../../styles/buttons.module.css";
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    font-size: xx-large;
+}
