--- a/components/app/learn/LearnNav.module.css
+++ b/components/app/learn/LearnNav.module.css
@@ -1,9 +1,15 @@
 .container {
     display: flex;
+    flex-wrap: wrap;
+    gap: 0.5rem;
+    font-size: 1.25rem;
+    color: var(--secondary);
+}
+
+.linkContainer {
+    display: flex;
     align-items: center;
     gap: 0.25rem;
-    font-size: 1.5rem;
-    color: var(--secondary);
 }
 
 .container svg {
@@ -11,6 +17,7 @@
 }
 
 .container a {
+    width: fit-content;
     border-bottom: 2px solid transparent;
     font-weight: 350;
     text-shadow: var(--shadow-md);
@@ -18,5 +25,14 @@
 }
 
 .container a:hover, .container a:active {
-    border-bottom-color: var(--secondary);
+    color: var(--link-hover);
+    border-bottom-color: var(--link-hover);
+}
+
+@media (min-width: 640px) {
+    .container {
+        flex-direction: row;
+        gap: 0.25rem;
+        font-size: 1.5rem;
+    }
 }
